<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app">airPass电子票夹</string>
    <string name="app_name">airPass电子票夹</string>
    <string name="auto_update">自动更新</string>
    <string name="remind_title">到店提醒</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_msg">正在加载，请稍后</string>
    <string name="dialog_delete_title">确定删除吗？</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_update">发现新版本</string>
    <string name="dialog_update_confirm">立即更新</string>
    <string name="dialog_update_cancel">暂不更新</string>
    <string name="dialog_try_again">再试一次？</string>
    <string name="btn_yes">是的</string>
    <string name="btn_no">取消</string>
    <string name="notify_apk_download_success">电子票夹下载完成</string>
    <string name="notify_apk_install">点击安装</string>
    <string name="no_sd_error">对不起，没有检测到SD卡，请插入SD卡后再使用</string>
    <string name="process_networker">联网中...</string>
    <string name="process_downloading">新优惠券正在下载中 请稍等...</string>
    <string name="process_downloading_apk">正在下载应用</string>
    <string name="process_busy">正在下载，请稍等</string>
    <string name="network_error">网络访问失败，是否重试？</string>
    <string name="format_error">网络数据错误，是否重试？</string>
    <string name="register_error">注册失败，是否重试？</string>
    <string name="persist_error">添加失败，请清理SD卡后重试</string>
    <string name="insert_success">添加成功</string>
    <string name="update_error">更新失败</string>
    <string name="update_success">更新成功</string>
    <string name="update_noneed">无需更新</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="preset_address"></string>
    <string name="gps_provider">baidu</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_status1">扫描二维码</string>
    <string name="msg_default_status2">即可添加优惠券至应用</string>
    <string name="zxing_url">http://code.google.com/p/zxing</string>
    <string name="button_ok">确定</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_google_shopper_missing">谷歌购物未安装</string>
    <string name="msg_install_google_shopper">谷歌购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
    <string name="title_about">条码扫描器</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="result_tel">找到电话号码</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_back">返回</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_clipboard_empty">清空剪切板</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨号</string>
    <string name="button_done">完成</string>
    <string name="button_email">发送email</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_google_shopper">谷歌购物</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_read_book">浏览本书</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="result_calendar">找到日历事件</string>
    <string name="result_email_address">找到email地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="result_product">找到产品</string>
    <string name="result_sms">找到短信地址</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_uri">找到URL</string>
    <string name="result_wifi">发现网络配置</string>
    <string name="banner_text">airPass电子票夹</string>
	<string name="get_from_web">从网页中获取</string>
	<string name="welcome_title">airPass电子票夹</string>
	<string name="airad">airAD</string>
	<string name="no_coupons">暂无优惠券，赶紧来添加吧!</string>
	<string name="coupon_detail">查看详情</string>
	<string name="delete">删除</string>
	<string name="reverse">翻转</string>
	<string name="share">分享到:</string>
	<string name="weixin_share_url">微信分享网址</string>
	<string name="message_content">分享一张不错的优惠券给你，注意日期尽快使用哦 ：） 下载地址：</string>
	<string name="weixin_frind_group">微信朋友圈</string>
	<string name="weixin_friend">微信好友</string>
	<string name="messgae">短信</string>
	<string name="weinxin_nostall">您尚未安装微信</string>
	<string name="weixin_nosupport_friend">当前微信不支持分享功能</string>
	<string name="weinxin_share_success">微信分享成功</string>
	<string name="weinxin_share_fail">微信分享失败</string>
</resources>