<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/j_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/banner_top"
        android:orientation="horizontal"
        android:padding="2dp" >

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/back_btn_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:drawableLeft="@drawable/banner_icon"
            android:gravity="center_vertical"
            android:text="@string/banner_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/j_web"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/banner_bottom"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/go_web"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/get_from_web_bg"
            android:text="@string/get_from_web" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/j_web"
        android:layout_below="@id/j_back" >

        <SurfaceView
            android:id="@+id/preview_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <com.google.zxing.client.android.ViewfinderView
            android:id="@+id/viewfinder_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:id="@+id/result_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/result_view"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="4dip"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="12dip" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="right|center_vertical"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/barcode_image_view"
                        android:layout_width="160dip"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dip"
                        android:adjustViewBounds="true"
                        android:maxHeight="160dip"
                        android:maxWidth="160dip"
                        android:scaleType="centerInside" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/format_text_view_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="4dip"
                            android:text="@string/msg_default_format"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/format_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/type_text_view_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="4dip"
                            android:text="@string/msg_default_type"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/type_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/time_text_view_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="4dip"
                            android:text="@string/msg_default_time"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/time_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/meta_text_view_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="4dip"
                            android:text="@string/msg_default_meta"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/meta_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/contents_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            android:paddingLeft="12dip"
                            android:textColor="@color/result_text"
                            android:textColorLink="@color/result_text"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/contents_supplement_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            android:padding="24dip"
                            android:textColor="@color/result_text"
                            android:textColorLink="@color/result_text"
                            android:textSize="14sp" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:background="#66000000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="#66000000"
            android:orientation="vertical" >

            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/msg_default_status1"
                android:textColor="@color/status_text"
                android:textSize="14sp" />

            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/msg_default_status2"
                android:textColor="@color/status_text"
                android:textSize="14sp" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>