<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/all_parent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:id="@+id/header_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:id="@+id/header_img"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/logo_size"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/icon" />

                <LinearLayout
                    android:id="@+id/j_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/header_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:singleLine="true"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/header_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:textSize="20dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/header_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toLeftOf="@id/j_header"
                    android:layout_toRightOf="@+id/header_img"
                    android:src="@drawable/icon"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/primary_field"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/primary_field_height"
                android:layout_below="@+id/header_field"
                android:layout_marginTop="5dp" >

                <ImageView
                    android:id="@+id/primary_img"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/primary_value"
                        style="@style/primary_field_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/primary_label_size" />

                    <TextView
                        android:id="@+id/primary_label"
                        style="@style/primary_field_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" />
                </LinearLayout>
            </RelativeLayout>

            <FrameLayout
                android:id="@+id/j_barcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/primary_field" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <LinearLayout
                        android:id="@+id/sub_field"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:orientation="horizontal" />

                    <RelativeLayout
                        android:id="@+id/barcode_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sub_field"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/filled_box"
                        android:padding="@dimen/qrcode_padding" >

                        <ImageView
                            android:id="@+id/barcode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true" />

                        <TextView
                            android:id="@+id/barcode_alt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/barcode"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="2dp"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="13sp" />
                    </RelativeLayout>
                </RelativeLayout>

                <ImageButton
                    android:id="@+id/infoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:background="@android:color/transparent"
                    android:src="@drawable/i"
                    android:visibility="gone" />
            </FrameLayout>

            <ImageView
                android:id="@+id/div_line"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/j_barcode"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="7dp"
                android:scaleType="fitXY"
                android:src="@drawable/coupon_divline" />

            <Button
                android:id="@+id/coupon_detail_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/coupon_detail"
                android:text="@string/coupon_detail"
                android:textColor="#999999" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/pass_mask_back" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/detail_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/j_btns_banner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/reverseBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:background="@drawable/rotate_btn_bg"
                    android:text="@string/reverse"
                    android:textColor="#ffffff"
                    android:textSize="13dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:visibility="invisible" />

                <ImageButton
                    android:id="@+id/reload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@android:color/transparent"
                    android:src="@drawable/reload_normal_bg" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/load_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/j_btns_banner"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical" >

                <FrameLayout
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/update_bg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/update_bg" />

                    <ImageView
                        android:id="@+id/update_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/update_arrow_deep" />
                </FrameLayout>

                <TextView
                    android:id="@+id/refresh_status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/main_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/j_btns_banner"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/outer_box"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:id="@+id/autoUpdate_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/filled_box"
                        android:padding="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="@string/auto_update"
                            android:textColor="#666666"
                            android:textSize="18dp" />

                        <CheckBox
                            android:id="@+id/autoUpdateView"
                            style="@style/checkbox"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/detail_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/filled_box"
                        android:orientation="vertical"
                        android:padding="10dp" >
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/back_bar_shap" />

                    <Button
                        android:id="@+id/delete_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/delete_coupon_bg"
                        android:text="@string/delete"
                        android:textColor="#ffffff" />
                </LinearLayout>
            </ScrollView>

            <View
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/pass_mask_back" />
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>